data fixtures: UnitDataFixture now uses translator for multilanguage Unit names
- see https://github.com/shopsys/shopsys/pull/1425

--- a/src/Shopsys/ShopBundle/Resources/translations/dataFixtures.cs.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/dataFixtures.cs.po
@@ -307,6 +307,12 @@ msgstr ""
 msgid "Zásady ochrany osobních údajů"
 msgstr ""
 
+msgid "ks"
+msgstr ""
+
+msgid "m³"
+msgstr "m³"
+
 msgid "no-reply@shopsys.com"
 msgstr ""
 
