--- a/src/Shopsys/ShopBundle/Resources/translations/dataFixtures.de.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/dataFixtures.de.po
@@ -307,6 +307,12 @@ msgstr ""
 msgid "Zásady ochrany osobních údajů"
 msgstr ""
 
+msgid "ks"
+msgstr "St."
+
+msgid "m³"
+msgstr "m³"
+
 msgid "no-reply@shopsys.com"
 msgstr ""
 
