--- a/src/Shopsys/ShopBundle/Resources/translations/messages.en.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/messages.en.po
@@ -829,7 +829,7 @@ msgstr ""
 msgid "Je sklad centrální"
 msgstr ""
 
-msgid "Je čas vyrazit: tvoje objednávka č. %%orderNo%% je připravena k vyzvednutí na prodejně %%storeName%%, zboží ti rezervujeme po dobu 5 dnů. Bushman.cz"
+msgid "Je čas vyrazit: Vaše objednávka č. %%orderNo%% je připravena k vyzvednutí na prodejně %%storeName%%, zboží vám rezervujeme po dobu 5 dnů."
 msgstr ""
 
 msgid "Ještě nebylo implementováno."
@@ -838,7 +838,7 @@ msgstr ""
 msgid "Jméno"
 msgstr ""
 
-msgid "Jsi členem Věrnostního programu"
+msgid "Jste členem Věrnostního programu"
 msgstr ""
 
 msgid "Kategorie"
@@ -1033,9 +1033,6 @@ msgstr ""
 msgid "Nastavit"
 msgstr ""
 
-msgid "Načerpejte inspiraci"
-msgstr ""
-
 msgid "Naše služby"
 msgstr ""
 
@@ -1093,7 +1090,7 @@ msgstr ""
 msgid "New store"
 msgstr ""
 
-msgid "Nezapomeň: tvoje objednávka č. %%orderNo%% bude ješte 2 dny připravena na prodejně %%storeName%%. Je čas vyrazit! Bushman.cz"
+msgid "Nezapomeňte: Vaše objednávka č. %%orderNo%% bude ješte 2 dny připravena na prodejně %%storeName%%."
 msgstr ""
 
 msgid "Nezlevněné produkty"
@@ -1460,12 +1457,6 @@ msgid "Poradíme s plaváním"
 msgstr ""
 
 msgid "Postcode"
-msgstr ""
-
-msgid "Představujeme trendy, radíme jak trénovat a ukazujeme naši firmu"
-msgstr "We present trends, advise on how to train and show our company"
-
-msgid "Price from"
 msgstr ""
 
 msgid "Pouze přihlášené"
@@ -2188,8 +2179,8 @@ msgstr ""
 msgid "Velikost obrázků"
 msgstr ""
 
-msgid "Video"
-msgstr ""
+msgid "Videa"
+msgstr "Videos"
 
 msgid "Viditelný na homepage"
 msgstr ""
@@ -2377,6 +2368,9 @@ msgstr ""
 msgid "You have to be logged in to enter this page"
 msgstr ""
 
+msgid "YouTube videa"
+msgstr ""
+
 msgid "Your cart is unfortunately empty. To create order, you have to <a href=\"%url%\">choose</a> some product first"
 msgstr ""
 
@@ -2384,9 +2378,6 @@ msgid "Your data had been successfully updated"
 msgstr ""
 
 msgid "Youtube"
-msgstr ""
-
-msgid "Youtube video id"
 msgstr ""
 
 msgid "Za zboží"
@@ -2432,6 +2423,9 @@ msgid "Změna této hodnoty se projeví do 2 hodin"
 msgstr ""
 
 msgid "Změnit"
+msgstr ""
+
+msgid "Změny se projeví několik minut po uložení z důvodu stahování aktuálních poboček."
 msgstr ""
 
 msgid "Změny v informačním řádky byly úspěšně uloženy"
@@ -2486,9 +2480,6 @@ msgid "Základní informace"
 msgstr ""
 
 msgid "Zásilkovna"
-msgstr ""
-
-msgid "Zážitky z cest si nenecháváme pro sebe"
 msgstr ""
 
 msgid "Zítra"
