--- a/src/Shopsys/ShopBundle/Resources/translations/messages.cs.po
+++ b/src/Shopsys/ShopBundle/Resources/translations/messages.cs.po
@@ -52,13 +52,7 @@ msgstr ""
 msgid "3 - čtverec"
 msgstr ""
 
-msgid "4 - čtverec"
-msgstr ""
-
-msgid "5 - velký obdelník na šířku"
-msgstr ""
-
-msgid "6 - obdélník na výšku"
+msgid "4 - velký obdelník na šířku"
 msgstr ""
 
 msgid "702 00 Ostrava"
@@ -186,9 +180,6 @@ msgstr "Základní"
 
 msgid "Basic information"
 msgstr "Základní informace"
-
-msgid "Belgien"
-msgstr ""
 
 msgid "Bestsellers"
 msgstr "Nejprodávanější zboží"
@@ -487,9 +478,6 @@ msgstr ""
 msgid "Detail promo produktu"
 msgstr ""
 
-msgid "Deutschland"
-msgstr ""
-
 msgid "Discount"
 msgstr "Sleva"
 
@@ -646,9 +634,6 @@ msgstr ""
 msgid "EAN"
 msgstr "EAN"
 
-msgid "EAN nenastaven"
-msgstr ""
-
 msgid "Editace banneru"
 msgstr ""
 
@@ -790,6 +775,9 @@ msgstr "Nadpis (H1)"
 msgid "Heslo"
 msgstr ""
 
+msgid "Hidden"
+msgstr "Skrytý"
+
 msgid "Hide"
 msgstr "Skrýt"
 
@@ -874,16 +862,10 @@ msgstr ""
 msgid "ID z IS"
 msgstr ""
 
-msgid "ID zákazníka"
-msgstr ""
-
 msgid "IN TIME"
 msgstr ""
 
 msgid "Id stavu z IS"
-msgstr ""
-
-msgid "Identifikační údaj zakazníka"
 msgstr ""
 
 msgid "Image"
@@ -902,9 +884,6 @@ msgid "Instagram"
 msgstr ""
 
 msgid "Interní identifikátor přenosu"
-msgstr ""
-
-msgid "Italia"
 msgstr ""
 
 msgid "Items"
@@ -982,6 +961,9 @@ msgstr ""
 msgid "Kombinovatelný"
 msgstr ""
 
+msgid "Konkrétní produkty"
+msgstr "Konkrétní produkty"
+
 msgid "Kontakt"
 msgstr ""
 
@@ -1035,12 +1017,6 @@ msgstr "Odhlásit se"
 
 msgid "Login"
 msgstr "Přihlášení"
-
-msgid "Lëtzebuerg"
-msgstr ""
-
-msgid "Magyarország"
-msgstr ""
 
 msgid "Main variant"
 msgstr "Hlavní varianta"
@@ -1099,6 +1075,9 @@ msgstr ""
 msgid "Minimální hodnota objednávky"
 msgstr ""
 
+msgid "Minimální množství můžete nastavit na kartě hlavní varianty."
+msgstr "Minimální množství můžete nastavit na kartě hlavní varianty."
+
 msgid "Minuty"
 msgstr ""
 
@@ -1138,9 +1117,6 @@ msgstr "Městečko - Nespeky č. p. 75"
 msgid "Město"
 msgstr ""
 
-msgid "Nadpis produktů"
-msgstr ""
-
 msgid "Nahrávejte velikosti obrázků: čtverec (380x290px), obdélník na výšku (380x600px)"
 msgstr "Nahrávej tyto velikosti obrázků: čtverec (380x290px), obdélník na výšku (380x600px)."
 
@@ -1171,9 +1147,6 @@ msgstr ""
 msgid "Nastavení bylo uloženo."
 msgstr ""
 
-msgid "Nastavení pro 6. pozici"
-msgstr ""
-
 msgid "Nastavení přiřazení článků"
 msgstr ""
 
@@ -1184,9 +1157,6 @@ msgid "Naše služby"
 msgstr ""
 
 msgid "Ne"
-msgstr ""
-
-msgid "Nederland"
 msgstr ""
 
 msgid "Nedoručena"
@@ -1218,6 +1188,9 @@ msgstr ""
 
 msgid "Neomezený počet použití"
 msgstr ""
+
+msgid "Neomezovat"
+msgstr "Neomezovat"
 
 msgid "Nepodařilo se změnit stav objednávky na Mall.cz (%errorMessage%)."
 msgstr ""
@@ -1302,6 +1275,9 @@ msgstr "Počet objednávek"
 
 msgid "Nyní budete přesměrováni na platební bránu GoPay."
 msgstr ""
+
+msgid "Násobky pro nákup můžete nastavit na kartě hlavní varianty."
+msgstr "Násobky pro nákup můžete nastavit na kartě hlavní varianty."
 
 msgid "Název dárku"
 msgstr ""
@@ -1389,6 +1365,18 @@ msgstr ""
 
 msgid "Omezení"
 msgstr ""
+
+msgid "Omezení na kategorie"
+msgstr "Omezení na kategorie"
+
+msgid "Omezení na produkty"
+msgstr "Omezení na produkty"
+
+msgid "Omezení na značky"
+msgstr "Omezení na značky"
+
+msgid "Omezit použití"
+msgstr "Omezit použití"
 
 msgid "Online shop"
 msgstr "Internetový obchod"
@@ -1603,6 +1591,12 @@ msgstr "Pokračujte podle pokynů"
 msgid "Please make sure that you entered right quantity of all items in cart."
 msgstr "Zkontrolujte si, zda máte správně zadané množství veškerých položek v košíku."
 
+msgid "Podle kategorie"
+msgstr "Podle kategorie"
+
+msgid "Podle značky"
+msgstr "Podle značky"
+
 msgid "Podle zvolené adresy nebylo možné vyhledat žádné pobočky"
 msgstr ""
 
@@ -1621,11 +1615,17 @@ msgstr ""
 msgid "Pokud nebude vyplněna nebo zatrhnura, zboží bude doručeno na fakturační adresu"
 msgstr "Pokud nebude vyplněna nebo označena, zboží bude doručeno na fakturační adresu"
 
+msgid "Položka %name% je skladem k dispozici v počtu %quantity% ks, počet kusů ve Vašem košíku jsme proto upravili."
+msgstr "Položka %name% je skladem k dispozici v počtu %quantity% ks, počet kusů ve Vašem košíku jsme proto upravili."
+
 msgid "Položka {{ name }} je skladem k dispozici v počtu {{ quantity }} ks, počet kusů ve Vašem košíku jsme proto upravili."
 msgstr "Položka {{ name }} je skladem k dispozici v počtu {{ quantity }} ks, počet kusů v tvém košíku jsme proto upravili."
 
-msgid "Polska"
-msgstr ""
+msgid "Položku %name% je možné nakoupit po násobcích %multiplier%, počet kusů ve Vašem košíku jsme proto upravili."
+msgstr "Položku %name% je možné nakoupit po násobcích %multiplier%, počet kusů ve Vašem košíku jsme proto upravili."
+
+msgid "Položku %name% je možné nakoupit v minimálním počtu %quantity% ks, počet kusů ve Vašem košíku jsme proto upravili."
+msgstr "Položku %name% je možné nakoupit v minimálním počtu %quantity% ks, počet kusů ve Vašem košíku jsme proto upravili."
 
 msgid "Pondělí až pátek 8:00 – 16:00"
 msgstr ""
@@ -1755,6 +1755,9 @@ msgstr "Přehled zboží v košíku"
 
 msgid "Products in stock only"
 msgstr "Jen zboží skladem"
+
+msgid "Produkt %name% musel být z košíku odstraněn, protože není skladem."
+msgstr "Produkt %name% musel být z košíku odstraněn, protože není skladem."
 
 msgid "Produkt je hotový"
 msgstr ""
@@ -2110,6 +2113,9 @@ msgstr ""
 msgid "Slevový kupón nelze aplikovat na zlevněné zboží."
 msgstr ""
 
+msgid "Slevový kupón nelze aplikovat na žádný produkt v košíku."
+msgstr "Slevový kupón nelze aplikovat na žádný produkt v košíku."
+
 msgid "Slevový kód"
 msgstr ""
 
@@ -2124,9 +2130,6 @@ msgstr "Slevový kód ještě nemůžete uplatnit. Jeho platnost je od {{validit
 
 msgid "Slider on main page"
 msgstr "Slider na hl. stránce"
-
-msgid "Slovensko"
-msgstr ""
 
 msgid "Služba dopravce"
 msgstr ""
@@ -2236,11 +2239,11 @@ msgstr ""
 msgid "Telephone"
 msgstr "Telefon"
 
-msgid "Tenký nadpis"
-msgstr ""
-
 msgid "Tento slevový kupón je již v objednávce aplikován."
 msgstr ""
+
+msgid "Tento slevový kupón nelze aplikovat na žádný produkt v košíku."
+msgstr "Tento slevový kupón nelze aplikovat na žádný produkt v košíku."
 
 msgid "Tento stav není možné smazat, jelikož je na něj navázána funkčnost"
 msgstr ""
@@ -2340,9 +2343,6 @@ msgstr "Zkus použít vyhledávání na webu"
 
 msgid "Tuhle značku není možné smazat. Jde o značku, která je automaticky přiřazena všem produktem."
 msgstr "Tuhle značku není možné smazat. Jde o značku, která je automaticky přiřazena všem produktům."
-
-msgid "Tučný nadpis"
-msgstr ""
 
 msgid "Tvar odkazu pro sledování zásilky"
 msgstr ""
@@ -2773,6 +2773,9 @@ msgstr ""
 msgid "Změny se projeví několik minut po uložení z důvodu stahování aktuálních poboček."
 msgstr ""
 
+msgid "Změny se projeví několik minut po uložení z důvodu stahování aktuálních poboček."
+msgstr "Změny se projeví několik minut po uložení z důvodu stahování aktuálních poboček."
+
 msgid "Změny v informačním řádky byly úspěšně uloženy"
 msgstr ""
 
@@ -2849,9 +2852,6 @@ msgid "dopravu zdarma!"
 msgstr ""
 
 msgid "e-shopu a souhlasím se zpracováním"
-msgstr ""
-
-msgid "ean"
 msgstr ""
 
 msgid "excluding VAT"
@@ -3019,13 +3019,7 @@ msgstr "{{title}} nemůžete uplatnit. Jeho platnost je od {{validityFrom}}."
 msgid "{{title}} není platný. Prosím, zkontrolujte ho."
 msgstr "{{title}} není platný. Prosím, zkontrolujte ho."
 
-msgid "Österreich"
-msgstr ""
-
 msgid "Úvod"
-msgstr ""
-
-msgid "Česko"
 msgstr ""
 
 msgid "Česká pošta"
@@ -3053,8 +3047,5 @@ msgid "Žádné dárky nenalezeny."
 msgstr ""
 
 msgid "Žádné promo produkty nenalezeny."
-msgstr ""
-
-msgid "БЪЛГАРИЯ"
 msgstr ""
 
