Fixed showing word "from" next to the product price when product has variants.

--- a/translations/messages.sk.po
+++ b/translations/messages.sk.po
@@ -3125,7 +3125,7 @@ msgid "from"
 msgstr "z"
 
 msgid "from %price%"
-msgstr "z %price%"
+msgstr "od %price%"
 
 msgid "historii svých objednávek,"
 msgstr "histórii svojich objednávok,"
