Initial change of German domain to English. Added English translation of all texts in messages.

--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -1714,7 +1714,7 @@ msgstr ""
 msgid "Rozbalit"
 msgstr ""
 
-msgid "Rozlišující parameter"
+msgid "Rozlišující parametr"
 msgstr ""
 
 msgid "Rozlišující parametr"
